# nyx

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  nyx.vim  rustfmt.toml
benches/: basic.rs  parsing.rs  stages.rs
benches/fixtures/: struct_pressure.nyx
nyx-lsp/: Cargo.toml  README.md
nyx-lsp/src/: analysis.rs  convert.rs  document.rs  lib.rs  main.rs  server.rs
nyx-lsp/tests/: lsp.rs
nyx-macros/: Cargo.toml
nyx-macros/src/: diagnostic.rs  fmt.rs
nyx_macros/: Cargo.toml
nyx_macros/src/: diagnostic.rs  fmt.rs  lib.rs
src/: analysis.rs  diagnostic.rs  lib.rs  main.rs  project.rs  source_map.rs
src/codegen/: x86_64.rs
src/hir/: collector.rs  constants.rs  declarations.rs  diagnostics.rs  error.rs  functions.rs  index_vec.rs  infer.rs  interfaces.rs  lower.rs  mangle.rs  mod.rs  module.rs  mono.rs  monomorph.rs  resolver.rs  scope.rs  structs.rs  symbols.rs  topo.rs  type_resolver.rs  types.rs
src/lexer/: char.rs  comment.rs  cursor.rs  error.rs  identifier.rs  mod.rs  number.rs  string.rs  token.rs
src/lir/: mod.rs  target.rs
src/mir/: error.rs  layout.rs  lower.rs  mod.rs
src/parser/: error.rs  expression.rs  mod.rs  statement.rs  subst.rs  visitor.rs
src/regalloc/: colouring.rs  interference.rs  (+2 more)
std/: char.nyx  clone.nyx  cmp.nyx  default.nyx  float.nyx  hash.nyx  int.nyx  io.nyx  mem.nyx  optional.nyx  panic.nyx  process.nyx  result.nyx  slice.nyx  str.nyx
tests/: add_with_main.nyx  collatz.nyx  factorial.nyx  floats.nyx  inlined_add.nyx  integration_tests.rs  module_tests.rs
(+76 files in other folders)
