[package]
name = "nyx"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nyx"
path = "src/main.rs"

[dependencies]
lasso = "0.7.3"
ariadne = { version = "0.6.0" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
libloading = "0.8"

[[bench]]
name = "basic"
harness = false
