[package]
name = "nyx"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "nyx"
path = "src/main.rs"

[workspace]
members = ["nyx-macros", "nyx-lsp"]
resolver = "2"

[dependencies]
lasso = "0.7.3"
bumpalo = "3"
ariadne = { version = "0.6.0" }
clap = { version = "4", features = ["derive"] }
nyx_macros = { path = "./nyx-macros" }

[dev-dependencies]
criterion = "0.5"
libloading = "0.8"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "parsing"
harness = false
